# lgf

./: CMakeLists.txt  README.md
include/lgf/: events.h  files.h  image.h  quad.h  text.h  window.h
include/lgf/linux/: window_linux.h
include/lgf/widgets/: anchors.h  bounds.h  button.h  image_panel.h  label.h  layout.h  panel.h  placeholder.h  resizeDirection.h  textbox.h  widget.h  widget_base.h
include/lgf/windows/: window_win.h
include/utf8/: IMPORTANT  utf8.h
include/utf8/utf8/: core.h
shaders/: button.frag  img_rounded.frag  rounded.frag  rounded.vert  text.frag  text.vert
src/: events.cpp  files.cpp  image.cpp  quad.cpp  text.cpp  window_linux.cpp  window_win.cpp
src/widgets/: button.cpp  image_panel.cpp  label.cpp  layout.cpp  panel.cpp  placeholder.cpp  textbox.cpp  widget.cpp  widget_base.cpp
